--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
     <string name="app_name">enigma</string>
     <string name="title_activity_main">enigma</string>
-    <string name="package_name">com.nachogl1.enigma</string>
-    <string name="custom_url_scheme">com.nachogl1.enigma</string>
+    <string name="package_name">com.nachogl1dev.enigma</string>
+    <string name="custom_url_scheme">com.nachogl1dev.enigma</string>
 </resources>
